Bug 1546027 - Don't apply scroll anchor adjustments if we're restoring our scroll position. r=dholbert a=RyanVM

Since scroll position restoration is absolute, and we'll lose it as soon as we
apply any adjustment or do any other sort of scrolling.

Differential Revision: https://phabricator.services.mozilla.com/D37941

--HG--
extra : source : da82282ba536a930d238cf4112246a92f40709ce